 Open Firm Accounting - NEWS

 Summary
 =======
 
   Version 0.69
   Version 0.68
   Version 0.67
   Version 0.66
   Version 0.65
   Version 0.64

-----------------------------------------------------------------------
 Version 0.69
 ============

 Released on 

 Total files count:    
 Total lines count: 

 New features and improvements:

   - 

 Bug fixes:

   - ofaAccountFrameBin: fix notebook size when the dataset is empty.
   - ofaAccountPage: fix page display when the dataset is empty.
   - ofaAccountStore: let the treeview be repopulated on collection reload.
   - ofaOpeTemplateFrameBin: fix notebook size when the dataset is empty.
   - ofaOpeTemplatePage: fix page display when the dataset is empty.
   - ofaOpeTemplateStore: let the treeview be repopulated on collection reload.

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.68
 ============

 Released on 2017- 3-21

 Total files count:    798
 Total lines count: 532196

 New features and improvements:

   Core DB Model v36
   Recurrent DB Model v9

   - CheckDBMSIntegrity: errors are displayed in red (todo #1395).
   - ClosingParms: improve account check (todo #513).
   - EntryPage: have an extended filter (todo #733).
   - EntryPage: may be opened several times.
   - ExerciceCloseAssistant: archive opening accounts balances (todo #1388).
   - Improve error messages when entering an operation (todo #1356).
   - Display conciliation group from an entry or a BAT line (todo #1372).
   - Review the window geometry management (todo #1285).
   - Let the user have a pin button to detach main tabs.
   - Pages which may be opened several times are numbered (todo #1380).
   - Printings: have a progression bar during pagination and rendering (todo #1403).
   - VAT declaration: let the label be edited by the user (todo #1378).
   - VAT declaration: operation label depends of the managed period (todo #1393).

 Bug fixes:
