@@ -511,6 +511,9 @@ ofo_class_insert( ofoClass *class )
 	signaler = ofa_igetter_get_signaler( getter );
 	hub = ofa_igetter_get_hub( getter );
 
+	/* rationale: see ofo-account.c */
+	ofo_class_get_dataset( getter );
+
 	if( class_do_insert( class, ofa_hub_get_connect( hub ))){
 		my_icollector_collection_add_object(
 				ofa_igetter_get_collector( getter ), MY_ICOLLECTIONABLE( class ), NULL, getter );
