@@ -562,6 +562,9 @@ ofo_currency_insert( ofoCurrency *currency )
 	signaler = ofa_igetter_get_signaler( getter );
 	hub = ofa_igetter_get_hub( getter );
 
+	/* rationale: see ofo-account.c */
+	ofo_currency_get_dataset( getter );
+
 	if( currency_do_insert( currency, ofa_hub_get_connect( hub ))){
 		my_icollector_collection_add_object(
 				ofa_igetter_get_collector( getter ), MY_ICOLLECTIONABLE( currency ), NULL, getter );
