@@ -485,6 +485,9 @@ ofo_paimean_insert( ofoPaimean *paimean )
 	signaler = ofa_igetter_get_signaler( getter );
 	hub = ofa_igetter_get_hub( getter );
 
+	/* rationale: see ofo-account.c */
+	ofo_paimean_get_dataset( getter );
+
 	if( paimean_do_insert( paimean, ofa_hub_get_connect( hub ))){
 		my_icollector_collection_add_object(
 				ofa_igetter_get_collector( getter ), MY_ICOLLECTIONABLE( paimean ), NULL, getter );
