@@ -1246,6 +1246,9 @@ ofo_tva_form_insert( ofoTVAForm *tva_form )
 	signaler = ofa_igetter_get_signaler( getter );
 	hub = ofa_igetter_get_hub( getter );
 
+	/* rationale: see ofo-account.c */
+	ofo_tva_form_get_dataset( getter );
+
 	if( form_do_insert( tva_form, ofa_hub_get_connect( hub ))){
 		my_icollector_collection_add_object(
 				ofa_igetter_get_collector( getter ), MY_ICOLLECTIONABLE( tva_form ), NULL, getter );
